[package]
name = "AvietGianna"
version = "0.1.0"
edition = "2021"

[dependencies]
relm4 = { version = "0.11.0", features = ["libadwaita"] }
relm4-components = "0.11.0"
gtk4 = { version = "0.11.3", package = "gtk4", features = ["v4_12"] }
libadwaita = { version = "0.9.1", features = ["v1_6"] }
thirtyfour = "0.37.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
once_cell = "1.19"
chrono = "0.4"
reqwest = { version = "0.13.4", features = ["json"] }
regex = "1.10"
